--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,30 @@
 alembic==1.4.2
+certifi==2019.11.28
+chardet==3.0.4
 click==7.1.1
+DAWG-Python==0.7.2
+docopt==0.6.2
 Flask==1.1.1
+Flask-Admin==1.5.5
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 Mako==1.1.2
 MarkupSafe==1.1.1
+numpy==1.18.2
+pandas==1.0.3
+psycopg2-binary==2.8.4
+pymorphy2==0.8
+pymorphy2-dicts==2.4.393442.3710985
 python-dateutil==2.8.1
 python-editor==1.0.4
+pytz==2019.3
+requests==2.23.0
 six==1.14.0
 SQLAlchemy==1.3.15
+urllib3==1.25.8
 Werkzeug==1.0.0
 WTForms==2.2.1
