--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,34 @@
-alembic==1.4.2
-certifi==2019.11.28
+alembic==1.4.3
+apimoex==1.2.0
+certifi==2020.6.20
 chardet==3.0.4
-click==7.1.1
+click==7.1.2
 DAWG-Python==0.7.2
 docopt==0.6.2
-Flask==1.1.1
-Flask-Admin==1.5.5
+Flask==1.1.2
+Flask-Admin==1.5.7
+Flask-Login==0.5.0
 Flask-Migrate==2.5.3
-Flask-SQLAlchemy==2.4.1
+Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
-idna==2.9
+gunicorn==20.0.4
+idna==2.10
 itsdangerous==1.1.0
-Jinja2==2.11.1
-Mako==1.1.2
+Jinja2==2.11.2
+Mako==1.1.3
 MarkupSafe==1.1.1
-numpy==1.18.2
-pandas==1.0.3
-psycopg2-binary==2.8.4
-pymorphy2==0.8
+numpy==1.19.4
+pandas==1.1.4
+psycopg2-binary==2.8.6
+pymorphy2==0.9.1
 pymorphy2-dicts==2.4.393442.3710985
+pymorphy2-dicts-ru==2.4.417127.4579844
 python-dateutil==2.8.1
 python-editor==1.0.4
-pytz==2019.3
-requests==2.23.0
-six==1.14.0
-SQLAlchemy==1.3.15
-urllib3==1.25.8
-Werkzeug==1.0.0
-WTForms==2.2.1
+pytz==2020.4
+requests==2.24.0
+six==1.15.0
+SQLAlchemy==1.3.20
+urllib3==1.25.11
+Werkzeug==1.0.1
+WTForms==2.3.3
